--- a/docs/books/theory/theory.tex
+++ b/docs/books/theory/theory.tex
@@ -315,7 +315,7 @@ X
 & Liv1 & Chapter 1-3 & X \\
 & StokLiv & Chapter 1-4 & X \\
 & ProjLiv & Buchardt \& Moeller (2015) & \\
-& Skade1 & Chapter 1-2.1 & \\
+& Skade1 & Chapter 1-2.1 & X \\
 & SkadeStok & Chapter 1-2 (Schmidli) & \\
 & Skade2 & Chapter 1-7 (uden 6), kursorisk & \\
 2 & QRM & Extreme value theory with heavy tails; Hill estimator; POT method. & \\
